Changes from Version 0.15-18 to 0.15-19 [XXX]

* Cast a few parameters that were producing warnings when compiling on the
  Clang compiler

* npglpreg() now optimizes at the level of the bandwidth scaling factors
  (thanks to Sebastien Le Digabel for the suggestion) to bring
  parameters to a `common scale'

* For cross-validation with npglpreg() we test for very large
  bandwidths for the continuous predictors (> bandwidth.switch
  robust standard deviations) then switch to the global
  polynomial approximation for computation speed (produces identical
  results but uses global least squares rather than local least
  squares). This can result in substantial improvements when large
  bandwidths are appropriate. Combined with trees (in progress in
  np) this could lead to marked reductions in computation time with
  zero loss in accuracy

Changes from Version 0.15-17 to 0.15-18 [Dec 29 2012]

* Using .onUnload rather than .Last.lib in zzz.R

* Added options to smooth residuals for stopping rule in crsiv
  (i.e. smooth y-phi(z)~w as opposed to separately smoothing y~w and
  phi(z)~w)

* Added options to input starting values for crsiv and crsivderiv

* Stopping rules for crsiv and crsivderiv modified

Changes from Version 0.15-16 to 0.15-17 [04-Jun-2012]

* Updated NOMAD from 3.5.0 (released Jan 2011) to 3.5.1 (released Mar
  2012)

Changes from Version 0.15-15 to 0.15-16 [30-Apr-2012]

* Fixed bug when deriv= is used in crs() (derivatives for categorical
  variables were not correct in some cases - derivatives computed by
  plot and plot-data were correct however)

* Fixed issue when plot called with "plot-data" or "data" and
  par(mfrow()) is not reset

* Startup message points to the faq, faq is now a vignette

* Glitch fixed in npglpreg() where kernel types were not being passed
  to the NOMAD solver...

* Added ckerorder option to npglpreg()

* More information output by summary for npglpreg() objects (kernel
  type, order etc.)
